# rsnake

./: Cargo.toml  README.md
src/: main.rs
src/lib/: assets.rs  main.rs  mod.rs
src/lib/assets/: apple.rs  snake.rs
