[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.25.0", features = ["event-stream"] }
ncurses = "5.101.0"
piston = "0.53.1"
piston_window = "0.124.0"
rand = "0.8.5"
strum = { version = "0.24.1", features = ["strum_macros"] }
strum_macros = "0.24.3"
